<resources>
    <string name="app_name">Memory</string>

    <string name="action_settings">Settings</string>
    <string name="action_practice">Practice</string>
    <string name="action_challenge">Challenge</string>
    <string name="action_menu">Menu</string>
    <string name="action_new_game">New Game</string>

    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_challenge">Challenge</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_global_settings">Global Settings</string>
    <string name="title_challenge_settings">Challenge Settings</string>

    <string name="return_menu">Return to Menu</string>

    <string name="settings_cards_per_set">Cards per set</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_max_mistakes">Maximum mistakes</string>
    <string name="settings_timelimit">Timelimit</string>

    <string name="error_invalid_theme">The selected theme is invalid for this game.</string>
    <string name="error_persistence_failed">An error occurred and the last game state could not be saved.</string>

    <string name="game_success">Game Won</string>
    <string name="game_failed">You did not complete the level within the time or chances available</string>

    <string name="header_time_progress">Time: </string>
    <string name="header_mistakes_progress">Mistakes: </string>

</resources>
