<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/menuactivity_root"
    tools:context=".MainMenu">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/action_practice"
        android:id="@+id/action_practice"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/action_challenge"
        android:id="@+id/action_challenge"
        android:layout_below="@id/action_practice"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/action_settings"
        android:id="@+id/action_settings"
        android:layout_below="@id/action_challenge"/>

</RelativeLayout>
